--- a/vue-js-invoice-generator/index.html
+++ b/vue-js-invoice-generator/index.html
@@ -17,7 +17,7 @@
          
          <p> Kangoute - Vue js </p>
          <div class="cd__action">
-            <a href="https://www.codepel.com/vue-js/vue-js-invoice-generator" title="Back to download and tutorial page" class="cd__btn back">Back to Tutorial</a>
+            <a href="https://github.com/Zoom225/Facture_Client_Html_Css_Js.git" title="Back to download and tutorial page" class="cd__btn back">Back to Tutorial</a>
          </div>
       </header>
       <!--$%adsense%$-->
